--- a/compose.yml
+++ b/compose.yml
@@ -1,4 +1,14 @@
 services:
+  mailpit:
+    image: axllent/mailpit:latest
+    restart: unless-stopped
+    volumes:
+      - mailpit:/data
+    ports:
+      - 1025:1025
+      - 8025:8025
+    environment:
+      MP_DATABASE: /data/mailpit.db
   db:
     image: 'postgres:latest'
     restart: unless-stopped
@@ -10,6 +20,16 @@ services:
       POSTGRES_PASSWORD: ${JOURNEY_DATABASE_PASSWORD}
     volumes:
       - db:/var/lib/postgresql/data
+  app:
+    build: .
+    ports:
+      - 8080:8080
+    environment:
+      JOURNEY_DATABASE_NAME: ${JOURNEY_DATABASE_NAME}
+      JOURNEY_DATABASE_USER: ${JOURNEY_DATABASE_USER}
+      JOURNEY_DATABASE_PASSWORD: ${JOURNEY_DATABASE_PASSWORD}
+      JOURNEY_DATABASE_PORT: ${JOURNEY_DATABASE_PORT:-5432}
+      JOURNEY_DATABASE_HOST: ${JOURNEY_DATABASE_HOST_DOCKER:-db}
 
 volumes:
   db:
